[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wecom-aibot-python-sdk-async"
version = "1.0.2"
description = "企业微信智能机器人 Python SDK —— 基于 WebSocket 长连接通道，提供消息收发、流式回复、模板卡片、事件回调、文件下载解密等核心能力。非官方版本，本个人维护版本进行了异步适配等优化与修复"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "WeCom", email = "wecom@tencent.com" },
    { name = "Dragon", email = "hahahagjl@gmail.com" },
]
keywords = ["wecom", "wechat-work", "aibot", "websocket", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "websockets>=14.0",
    "aiohttp>=3.9",
    "pyee>=11.0",
    "cryptography>=42.0",
    "certifi>=2023.0",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[project.urls]
Homepage = "https://github.com/xioajiumi/wecom-aibot-python-sdk-async"
Repository = "https://github.com/xioajiumi/wecom-aibot-python-sdk-async"

[tool.setuptools.packages.find]
include = ["aibot*"]
